crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__errors__sig_recov.snap
---
source: crates/agglayer-jsonrpc-api/src/tests/errors.rs
expression: "SignatureMismatch { detail: \"could not recover transaction signer: signature error\" }"
---
{
  "code": -10002,
  "data": {
    "signature-mismatch": {
      "detail": "could not recover transaction signer: signature error"
    }
  },
  "message": "Rollup signature verification failed"
}
