crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__errors__sig_signer.snap
---
source: crates/agglayer-jsonrpc-api/src/tests/errors.rs
expression: "SignatureMismatch { detail: \"invalid signer: expected 0x4444444444444444444444444444444444444444, got 0x3333333333333333333333333333333333333333\" }"
---
{
  "code": -10002,
  "data": {
    "signature-mismatch": {
      "detail": "invalid signer: expected 0x4444444444444444444444444444444444444444, got 0x3333333333333333333333333333333333333333"
    }
  },
  "message": "Rollup signature verification failed"
}
