crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__errors__sig_verif.snap
---
source: crates/agglayer-jsonrpc-api/src/tests/errors.rs
expression: "SignatureMismatch { detail: \"invalid signer: expected 0x2222222222222222222222222222222222222222, got 0x1111111111111111111111111111111111111111\" }"
---
{
  "code": -10002,
  "data": {
    "signature-mismatch": {
      "detail": "invalid signer: expected 0x2222222222222222222222222222222222222222, got 0x1111111111111111111111111111111111111111"
    }
  },
  "message": "Rollup signature verification failed"
}
