crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__errors__txstatus_check.snap
---
source: crates/agglayer-jsonrpc-api/src/tests/errors.rs
expression: "Status(TxStatus { detail: \"provider error: Signer unavailable\" })"
---
{
  "code": -10005,
  "data": {
    "status": {
      "tx-status": {
        "detail": "provider error: Signer unavailable"
      }
    }
  },
  "message": "Status retrieval error: Failed to get tx status"
}
